actions list headers: fix spacing

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -6249,7 +6249,7 @@ output {
     margin-right: -9px;
   }
   
-  h2, h3 {
+  h2 {
     margin-bottom: 0;
   }
 
